# SharePoint-Discovery-Agent

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
agents/: main_agent.py
agents/subagents/: execution_subagent.py  installation_subagent.py  intake_subagent.py  planning_subagent.py  reporting_subagent.py
scripts/discovery/: customizations_inventory.ps1  external_sharing_inventory.ps1  lists_inventory.ps1  pages_inventory.ps1  permissions_inventory.ps1  site_inventory.ps1  storage_inventory.ps1  user_inventory.ps1
scripts/setup/: install_pnp.ps1  verify_prerequisites.ps1
skills/artifact_analysis/: SKILL.md
skills/assessment/: SKILL.md
skills/capability_reasoning/: SKILL.md
skills/discovery/: SKILL.md
skills/execution/: SKILL.md
skills/installation/: SKILL.md
skills/intake/: SKILL.md
skills/planning/: SKILL.md
skills/readiness/: SKILL.md
skills/reporting/: SKILL.md
src/agents/: __init__.py  main_agent.py
src/agents/subagents/: __init__.py  artifact_analysis_subagent.py  capability_reasoning_subagent.py  execution_subagent.py  installation_subagent.py  intake_subagent.py  planning_subagent.py  (+2 more)
src/capabilities/: customizations_inventory.yaml  external_sharing_inventory.yaml  lists_inventory.yaml  pages_inventory.yaml  permissions_inventory.yaml  sharepoint_site_inventory.yaml  storage_inventory.yaml  tenant_configuration.yaml
src/config/: __init__.py  settings.py
src/tools/: __init__.py  artifact_tool.py  file_tool.py  powershell_tool.py  retry_tool.py
tests/: test_config.py
tools/: file_tool.py  powershell_tool.py
